dates/crashes/e5b39fb245d11a3436a26b5bbd2c7c94f99f1f7d/report21
EXT4-fs error (device loop2) in ext4_do_update_inode:5151: error 27
EXT4-fs error (device loop2): __ext4_ext_dirty:169: inode #2: comm syz.2.382: mark_inode_dirty error
==================================================================
BUG: KASAN: use-after-free in ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
Read of size 4 at addr ffff88801a757000 by task syz.2.382/6412

CPU: 0 PID: 6412 Comm: syz.2.382 Not tainted 5.10.0 #1
Hardware name: QEMU Ubuntu 24.04 PC (i440FX + PIIX, 1996), BIOS 1.16.3-debian-1.16.3-2 04/01/2014
Call Trace:
 __dump_stack lib/dump_stack.c:77 [inline]
 dump_stack+0x107/0x163 lib/dump_stack.c:118
 print_address_description.constprop.0+0x1c/0x210 mm/kasan/report.c:385
 __kasan_report mm/kasan/report.c:545 [inline]
 kasan_report.cold+0x37/0x7c mm/kasan/report.c:562
 ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
 ext4_rename+0x15b1/0x2640 fs/ext4/namei.c:3816
 ext4_rename2+0x1af/0x240 fs/ext4/namei.c:4109
 vfs_rename+0xf1b/0x1960 fs/namei.c:4310
 do_renameat2+0x732/0xb80 fs/namei.c:4457
 __do_sys_renameat2 fs/namei.c:4492 [inline]
 __se_sys_renameat2 fs/namei.c:4489 [inline]
 __x64_sys_renameat2+0xba/0x150 fs/namei.c:4489
 do_syscall_64+0x33/0x40 arch/x86/entry/common.c:46
 entry_SYSCALL_64_after_hwframe+0x44/0xa9
RIP: 0033:0x7f9422e0aef9
Code: ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 c7 c1 a8 ff ff ff f7 d8 64 89 01 48
RSP: 002b:00007f9421a84038 EFLAGS: 00000246 ORIG_RAX: 000000000000013c
RAX: ffffffffffffffda RBX: 00007f9422fc2f80 RCX: 00007f9422e0aef9
RDX: 0000000000000008 RSI: 0000000020000000 RDI: 0000000000000008
RBP: 00007f9422e7db76 R08: 0000000000000004 R09: 0000000000000000
R10: 0000000020000200 R11: 0000000000000246 R12: 0000000000000000
R13: 0000000000000000 R14: 00007f9422fc2f80 R15: 00007ffc00215a18

The buggy address belongs to the page:
page:00000000fafcd8a2 refcount:0 mapcount:-128 mapping:0000000000000000 index:0x1 pfn:0x1a757
flags: 0x100000000000000()
raw: 0100000000000000 ffffea000069d708 ffffea000076cfc8 0000000000000000
raw: 0000000000000001 0000000000000000 00000000ffffff7f 0000000000000000
page dumped because: kasan: bad access detected

Memory state around the buggy address:
 ffff88801a756f00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 ffff88801a756f80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
>ffff88801a757000: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
                   ^
 ffff88801a757080: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
 ffff88801a757100: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
==================================================================
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 3: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=12, inode=514, rec_len=0, name_len=0, size=2048
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 12: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=0, inode=5066064, rec_len=1, name_len=0, size=2048
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 13: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=0, inode=3653246737, rec_len=1, name_len=0, size=2048
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 14: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=0, inode=3, rec_len=0, name_len=0, size=2048
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 15: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=0, inode=5, rec_len=0, name_len=0, size=2048
EXT4-fs error (device loop2): ext4_readdir:243: inode #2: block 16: comm syz-executor: path /17/file0: bad entry in directory: rec_len is smaller than minimal - offset=0, inode=3653245223, rec_len=1, name_len=0, size=2048
